// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch calls onChange with correct value when toggled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <input
        class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
        data-testid="toggle-checkbox"
        id="test-uuid-1234-5678-910"
        type="checkbox"
      />
      <label
        class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
        for="test-uuid-1234-5678-910"
      >
        <span
          class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <input
      class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
      data-testid="toggle-checkbox"
      id="test-uuid-1234-5678-910"
      type="checkbox"
    />
    <label
      class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
      for="test-uuid-1234-5678-910"
    >
      <span
        class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ToggleSwitch is unchecked by default 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <input
        class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
        data-testid="toggle-checkbox"
        id="test-uuid-1234-5678-910"
        type="checkbox"
      />
      <label
        class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
        for="test-uuid-1234-5678-910"
      >
        <span
          class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <input
      class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
      data-testid="toggle-checkbox"
      id="test-uuid-1234-5678-910"
      type="checkbox"
    />
    <label
      class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
      for="test-uuid-1234-5678-910"
    >
      <span
        class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ToggleSwitch renders the switch input and label 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <input
        class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
        data-testid="toggle-checkbox"
        id="test-uuid-1234-5678-910"
        type="checkbox"
      />
      <label
        class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
        for="test-uuid-1234-5678-910"
      >
        <span
          class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <input
      class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
      data-testid="toggle-checkbox"
      id="test-uuid-1234-5678-910"
      type="checkbox"
    />
    <label
      class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
      for="test-uuid-1234-5678-910"
    >
      <span
        class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ToggleSwitch respects isChecked prop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <input
        checked=""
        class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
        data-testid="toggle-checkbox"
        id="test-uuid-1234-5678-910"
        type="checkbox"
      />
      <label
        class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
        for="test-uuid-1234-5678-910"
      >
        <span
          class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <input
      checked=""
      class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
      data-testid="toggle-checkbox"
      id="test-uuid-1234-5678-910"
      type="checkbox"
    />
    <label
      class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
      for="test-uuid-1234-5678-910"
    >
      <span
        class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ToggleSwitch toggles checked state on click 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <input
        class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
        data-testid="toggle-checkbox"
        id="test-uuid-1234-5678-910"
        type="checkbox"
      />
      <label
        class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
        for="test-uuid-1234-5678-910"
      >
        <span
          class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <input
      class="ToggleSwitch__SwitchInput-sc-1n3fzwh-1 Fwlpj"
      data-testid="toggle-checkbox"
      id="test-uuid-1234-5678-910"
      type="checkbox"
    />
    <label
      class="ToggleSwitch__SwitchLabel-sc-1n3fzwh-0 hFRJiv"
      for="test-uuid-1234-5678-910"
    >
      <span
        class="CombinedStyling__Span-sc-c3jdxk-1 ToggleSwitch__SwitchSliderSpan-sc-1n3fzwh-2 kSRMWv hLssYN"
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
